--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USER=postgres
 DB_PASSWORD=1234
 DB_HOST=localhost
-DB_DEPLOY = postgresql://postgres:RM9v1MNs8eQgBPh3U9lr@containers-us-west-109.railway.app:6071/railway
+DB_DEPLOY = postgresql://postgres:yzTEd8XlxSzRAS105xWD@containers-us-west-36.railway.app:5766/railway
 PORT=3001
